index.css
body {
  background-color: black;
  color: white;
}

.lightMode {
  background-color: white;
  color: black;
}

/* .center {
  display: block;
  margin-left: auto;
  margin-right: auto;
} */

/* 
div.aboutMe {
  a {
    color: rgb(0, 90, 255);
  }
  text-align: center;
}


div.socials {
  text-align: center;
}


form {
  text-align: center;
} */

.submit {
  height: 50px;
  width: 200px;
}

div.lightModeButt{
  position: absolute;
  top: 0;
  right: 0;
  padding: 10px;
}

.center {
  max-width: 40%;
  height: 40%;
}

/* form {
  max-width: 100%;
} */

.container {
  display: flex;
  flex-direction: column;
  justify-content: baseline;
  align-items: center;
  text-align: center;
}

